--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             </nav>
             <img src="imagens/img_sect.jpeg" alt="foto ilustrativa">
         </section>
+
+        <section id="sobre">
+            <h2>Sobre</h2>
+        </section>
     </main>
 
 </body>
