Resolvendo um bug

--- a/index.html
+++ b/index.html
@@ -1,44 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Thárcis Santos, instrutor de Jiu-Jítsu. Aprenda com um competidor experiente, desenvolvendo técnica, disciplina e autoconfiança."
+    />
     <title>Thárcis Santos BJJ</title>
-    <link rel="stylesheet" href="estilos/style.css"> 
+    <link rel="stylesheet" href="estilos/style.css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Bebas+Neue&family=Dancing+Script:wght@400..700&display=swap');
-    </style>   
-</head>
-<body>    
-<header>
-        <h1 class="dancing-script">
-            <span><img src="imagens/logo.jpeg" alt="logo" class="logo"></span>
-            Professor Thárcis Santos - Mestre Julio Secco
-        </h1>
-    </header>    
-     <main>
-        <section>
-            <img src="imagens/img_sect.jpeg" alt="foto ilustrativa">
-        </section>
-        <section class="secao">
-            <h2 class="baskervville-regular-italic">Sobre</h2>
-            <div class="secao-conteudo">
-                <p>
-                    Sou Thárcis Santos, Instrutor de Jiu-Jítsu, praticante e competidor desde 2019. Minha jornada começou sob a orientação do Sensei <a href="https://www.instagram.com/danielfolgadobjj/"target="_blank"><em>Daniel Rodrigues (Folgado)</em></a>🔗, sendo filiado à academia do mestre Júlio Secco. Minha missão é ensinar e compartilhar os valores do jiu-jítsu, ajudando alunos de todas as idades a evoluírem técnica e mentalmente dentro da arte suave.
-                </p>
-            </div>
-        </section>
-        <section class="secao">
-            <h2 class="baskervville-regular-italic">Nossa Metodologia</h2>
-            <div class="subtitulo">
-                <h3>Aula Kids</h3>
-            </div>
-            <div class="secao-conteudo">
-                <p>
-                    Utilizamos um método lúdico para que as crianças se apaixonem pelo jiu-jítsu enquanto aprendem técnicas de defesa pessoal. O foco é desenvolver coordenação motora, disciplina e autoconfiança de forma divertida e envolvente.
-                </p>
-            </div>
-        </section>
+      @import url("https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Bebas+Neue&family=Dancing+Script:wght@400..700&display=swap");
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1 class="dancing-script">
+        <span><img src="imagens/logo.jpeg" alt="logo" class="logo" /></span>
+        Professor Thárcis Santos - Mestre Julio Secco
+      </h1>
+    </header>
+    <main>
+      <section>
+        <img src="imagens/img_sect.jpeg" alt="foto ilustrativa" />
+      </section>
+      <section class="secao">
+        <h2 class="baskervville-regular-italic">Sobre</h2>
+        <div class="secao-conteudo">
+          <p>
+            Sou Thárcis Santos, Instrutor de Jiu-Jítsu, praticante e competidor
+            desde 2019. Minha jornada começou sob a orientação do Sensei
+            <a
+              href="https://www.instagram.com/danielfolgadobjj/"
+              target="_blank"
+              ><em>Daniel Rodrigues (Folgado)</em></a
+            >🔗, sendo filiado à academia do mestre Júlio Secco. Minha missão é
+            ensinar e compartilhar os valores do jiu-jítsu, ajudando alunos de
+            todas as idades a evoluírem técnica e mentalmente dentro da arte
+            suave.
+          </p>
+        </div>
+      </section>
+      <section class="secao">
+        <h2 class="baskervville-regular-italic">Nossa Metodologia</h2>
+        <div class="subtitulo">
+          <h3>Aula Kids</h3>
+        </div>
+        <div class="secao-conteudo">
+          <p>
+            Utilizamos um método lúdico para que as crianças se apaixonem pelo
+            jiu-jítsu enquanto aprendem técnicas de defesa pessoal. O foco é
+            desenvolver coordenação motora, disciplina e autoconfiança de forma
+            divertida e envolvente.
+          </p>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
