--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thárcis Santos BJJ</title>
-    <link rel="stylesheet" href="estilos/style.css"> 
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Bebas+Neue&family=Dancing+Script:wght@400..700&display=swap');
     </style>
-
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Montserrat:wght@100..900&display=swap');
     </style>
@@ -53,6 +53,11 @@
         </section>
         <section class="secao">
             <h2 class="baskervville-regular-italic">Nosso Compromisso</h2>
+            <div class="secao-conteudo">
+                <p>
+                    Seja qual for seu objetivo, condicionamento físico, defesa pessoal ou competição, nosso compromisso é oferecer um ambiente acolhedor e didático para que você evolua no jiu-jítsu.<br>Agende uma aula experimental e venha treinar com a gente!
+                </p>
+            </div>
         </section>
     </main>
 </body>
