--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Bebas+Neue&family=Dancing+Script:wght@400..700&display=swap');
-    </style>
-    <style>
         @import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Montserrat:wght@100..900&display=swap');
     </style>
 </head>
@@ -19,6 +16,7 @@
             <span><img src="imagens/logo.jpeg" alt="logo" class="logo"></span>
             Professor Thárcis Santos - Mestre Julio Secco
         </h1>
+        <!-- Corpus Fitness -->
     </header>    
      <main>
         <section>
@@ -35,7 +33,7 @@
         <section class="secao">
             <h2 class="baskervville-regular-italic">Nossa Metodologia</h2>
             <div class="subtitulo">
-                <h3 class="montserrat">Aulas Kids:</h3>
+                <h3 class="montserrat" id="diminuir">Kids:</h3>
             </div>
             <div class="secao-conteudo">
                 <p>
@@ -43,20 +41,112 @@
                 </p>
             </div>
             <div class="subtitulo">
-                <h3 class="montserrat" id="prolongar">Aulas Para Iniciantes:</h3>
+                <h3 class="montserrat" id="prolongar2">Iniciantes:</h3>
             </div>
             <div class="secao-conteudo">
                 <p>
                     Introduzimos os conceitos fundamentais do jiu-jítsu, seguindo a metodologia do mestre Júlio Secco. Os alunos aprendem desde as posições básicas até a construção de um jogo técnico eficiente, permitindo um progresso gradual para níveis mais avançados.
                 </p>
             </div>
+            <div class="subtitulo">
+                <h3 class="montserrat" id="prolongar">Intermediário:</h3>
+            </div>
+            <div class="secao-conteudo">
+                <p>Treinamentos voltado para alunos graduados nas faixas azul e roxa. Estabelecendo novas técnicas, preparando os alunos para darem os primeiros passos para contribuirem no ensinamento de novos alunos que serão introduzidos na classe iniciantes.</p>
+            </div>
+            <div class="subtitulo">
+                <h3 class="montserrat">Avançado:</h3>
+            </div>
+            <div class="secao-conteudo">
+                <p>Treinamentos voltado para faixa marrom e preta, ou alunos menos graduados que já treinam há mais tempo que os intermediários normais, buscando uma evolução contínua dentro do esporte.</p>
+            </div>
+            <div class="subtitulo">
+                <h3 class="montserrat" id="prolongar3">Competição:</h3>
+            </div>
+            <div class="secao-conteudo">
+                <p>Nos treinos de competição, como o próprio nome já diz, é específico para quem quer competir! Não tendo separação por graduação, idade e nem peso, treinam no horário de meio dia todo e qualquer aluno aquele que deseja participar de competições.</p>
+            </div>
         </section>
         <section class="secao">
             <h2 class="baskervville-regular-italic">Nosso Compromisso</h2>
             <div class="secao-conteudo">
                 <p>
-                    Seja qual for seu objetivo, condicionamento físico, defesa pessoal ou competição, nosso compromisso é oferecer um ambiente acolhedor e didático para que você evolua no jiu-jítsu.<br>Agende uma aula experimental e venha treinar com a gente!
+                    Seja qual for seu objetivo, condicionamento físico, defesa pessoal ou competição, nosso compromisso é oferecer um ambiente acolhedor e didático para que você evolua no jiu-jítsu.<br><a href="https://wa.me/555399696349" target="_blank">📅<em> Agende uma aula experimental</em></a> e venha treinar com a gente!
                 </p>
+            </div>
+        </section>
+        <section class="secao">
+            <h2 class="baskervville-regular-italic">Horários</h2>
+            <div class="secao-conteudo">
+                <table class="tabela-horarios">
+                    <thead>
+                        <tr>
+                            <th>Dia</th>
+                            <th>Kids</th>
+                            <th>Iniciantes</th>
+                            <th>Competição</th>
+                            <th>Intermediário</th>
+                            <th>Avançado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Segunda-feira</td>
+                            <td>08:00</td>
+                            <td>10:00</td>
+                            <td>12:00</td>
+                            <td>18:00</td>
+                            <td>20:00</td>
+                        </tr>
+                        <tr>
+                            <td>Terça-feira</td>
+                            <td>09:00</td>
+                            <td>11:00</td>
+                            <td>12:00</td>
+                            <td>17:00</td>
+                            <td>19:00</td>
+                        </tr>
+                        <tr>
+                            <td>Quarta-feira</td>
+                            <td>08:00</td>
+                            <td>10:00</td>
+                            <td>12:00</td>
+                            <td>18:00</td>
+                            <td>20:00</td>
+                        </tr>
+                        <tr>
+                            <td>Quinta-feira</td>
+                            <td>09:00</td>
+                            <td>11:00</td>
+                            <td>12:00</td>
+                            <td>17:00</td>
+                            <td>19:00</td>
+                        </tr>
+                        <tr>
+                            <td>Sexta-feira</td>
+                            <td>08:00</td>
+                            <td>10:00</td>
+                            <td>12:00</td>
+                            <td>18:00</td>
+                            <td>20:00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section class="secao">
+            <h2 class="baskervville-regular-italic">Galeria de Treinos</h2>
+            <div class="galeria">
+                <img src="imagens/treino1.jpeg" alt="treino1">
+                <img src="imagens/treino2.jpeg" alt="treino2">
+                <img src="imagens/treino3.jpeg" alt="treino3">
+                <img src="imagens/treino4.jpeg" alt="treino4">
+                <img src="imagens/treino5.jpeg" alt="treino5">
+                <img src="imagens/treino6.jpeg" alt="treino6">
+                <img src="imagens/treino7.jpeg" alt="treino7">
+                <img src="imagens/treino9.jpeg" alt="treino9">
+                <img src="imagens/treino10.jpeg" alt="treino10">
+                <img src="imagens/helena.jpeg" alt="treino11">
             </div>
         </section>
     </main>
