Adicionei as fotos

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 <img src="imagens/treino5.jpeg" alt="treino5">
                 <img src="imagens/treino6.jpeg" alt="treino6">
                 <img src="imagens/treino7.jpeg" alt="treino7">
+                <img src="imagens/treino8.jpeg" alt="treino8">
                 <img src="imagens/treino9.jpeg" alt="treino9">
                 <img src="imagens/treino10.jpeg" alt="treino10">
-                <img src="imagens/helena.jpeg" alt="treino11">
             </div>
         </section>
     </main>
