--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 </table>
             </div>
         </section>
-        <section class="secao">
-            <h2 class="baskervville-regular-italic">Galeria de Treinos</h2>
+        <section class="secao" style="margin-top: 15px;">
+            <h2 class="baskervville-regular-italic">Galeria de Fotos</h2>
             <div class="galeria">
                 <img src="imagens/treino1.jpeg" alt="treino1">
                 <img src="imagens/treino2.jpeg" alt="treino2">
@@ -149,6 +149,37 @@
                 <img src="imagens/treino10.jpeg" alt="treino10">
             </div>
         </section>
+        <section class="secao" style="margin-top: 5px; padding: 10px;">
+            <h2 class="baskervville-regular-italic">Visite-nos</h2>
+            <div class="secao-conteudo"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.545447172421!2d-39.0650522!3d-16.4478962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x73696ae11829d9b%3A0x7a2f38b1204ef6eb!2sAcademia%20Corpus%20Fitness!5e0!3m2!1spt-BR!2sbr!4v1744380043968!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </section>
+        <section class="secao">
+            <h2 class="baskervville-regular-italic">Seja um Parceiro</h2>
+            <div class="secao-conteudo">
+                <form action="cadastro.php" method="post">Contate-nos:</form>
+                <p>Enive-nos a sua proposta de parceria, em breve entraremos em contato com você!
+                <br><label for="nome">Nome:</label>
+                <input type="text" name="nome" id="nome">
+                <br><label for="fone">Fone:</label>
+                <input type="tel" name="fone" id="fone">
+                <br><label for="email">E-mail:</label>
+                <input type="email" name="email" id="email">
+                <br><input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
+                </p>
+            </div>
+        </section>
     </main>
+    <footer class="rodape">
+        <div class="rodape-conteudo">
+            <p>&copy; 2025 Professor Thárcis Santos - Todos os direitos reservados.</p>
+            <p>
+                <a href="https://wa.me/555399696349" target="_blank">WhatsApp</a>
+                <a href="https://www.instagram.com/tharcis.bjj/" target="_blank">instagram</a>
+                <a href="#">E-mail</a>
+            </p>
+            <p class="rodape-local">Corpus Fitness - Teixeira de Freitas/BA</p>
+        </div>
+    </footer>
 </body>
 </html>
