--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
             <p>&copy; 2025 Professor Thárcis Santos - Todos os direitos reservados.</p>
             <p>
                 <a href="https://wa.me/555399696349" target="_blank">
-                    <img src="imagens/icons8-whatsapp-50.png" alt="">
+                    <img src="imagens/icone-whats.png" alt="">
                 </a>
                 <a href="https://www.instagram.com/tharcis.bjj/" target="_blank">
-                    <img src="imagens/icons8-instagram-48.png" alt="Ícone do Instagram">
+                    <img src="imagens/icone-insta.png" alt="Ícone do Instagram">
                 </a>
             </p>
             <p class="rodape-local">Corpus Fitness - Teixeira de Freitas/BA</p>
