--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <h2 class="baskervville-regular-italic">Seja um Parceiro</h2>
             <div class="secao-conteudo">
                 <form action="cadastro.php" method="post">Contate-nos:
-                    <p style="text-align: center;">Enive-nos a sua proposta de parceria, em breve entraremos em contato com você!</p>
+                    <p style="text-align: center;">Envie-nos a sua proposta de parceria, em breve entraremos em contato com você!</p>
                         <label for="nome">Nome:</label>
                         <input type="text" name="nome" id="nome">
                         <br><label for="fone">Fone:</label>
@@ -177,7 +177,7 @@
             <p>&copy; 2025 Professor Thárcis Santos - Todos os direitos reservados.</p>
             <p>
                 <a href="https://wa.me/555399696349" target="_blank">
-                    <img src="imagens/icone-whats.png" alt="">
+                    <img src="imagens/icone-whats.png" alt="Ícone do WhatsApp">
                 </a>
                 <a href="https://www.instagram.com/tharcis.bjj/" target="_blank">
                     <img src="imagens/icone-insta.png" alt="Ícone do Instagram">
