--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thárcis Santos BJJ</title>
-    <link rel="shortcut icon" href="imagens/favicon_io/favicon2.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
     <style>
@@ -59,7 +58,7 @@
                 <h3 class="montserrat">Avançado:</h3>
             </div>
             <div class="secao-conteudo">
-                <p>Treinamentos voltado para faixa marrom e preta, ou alunos menos graduados que já treinam há mais tempo que os intermediários normais, buscando uma evolução contínua dentro do esporte.</p>
+                <p>Treinamentos voltados para faixa marrom e preta, ou alunos menos graduados que já treinam há mais tempo que os intermediários normais, buscando uma evolução contínua dentro do esporte.</p>
             </div>
             <div class="subtitulo">
                 <h3 class="montserrat" id="prolongar3">Competição:</h3>
@@ -160,11 +159,11 @@
                 <form action="cadastro.php" method="post">Contate-nos:
                     <p style="text-align: center;">Envie-nos a sua proposta de parceria, em breve entraremos em contato com você!</p>
                         <label for="nome">Nome:</label>
-                        <input type="text" name="nome" id="nome">
+                        <input type="text" name="nome" id="nome" placeholder="Seu nome:" required>
                         <br><label for="fone">Fone:</label>
-                        <input type="tel" name="fone" id="fone">
+                        <input type="tel" name="fone" id="fone" placeholder="Seu telefone:" required>
                         <br><label for="email">E-mail:</label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" placeholder="Seu e-mail:" required>
                         <div class="botoes-form">
                             <input type="submit" value="Enviar">
                             <input type="reset" value="Limpar">
@@ -178,10 +177,10 @@
             <p>&copy; 2025 Professor Thárcis Santos - Todos os direitos reservados.</p>
             <p>
                 <a href="https://wa.me/555399696349" target="_blank">
-                    <img src="imagens/icone-whats.png" alt="Ícone do WhatsApp">
+                    <img src="imagens/icons8-whatsapp-50.png" alt="Ícone do WhatsApp">
                 </a>
                 <a href="https://www.instagram.com/tharcis.bjj/" target="_blank">
-                    <img src="imagens/icone-insta.png" alt="Ícone do Instagram">
+                    <img src="imagens/icons8-instagram-48.png" alt="Ícone do Instagram">
                 </a>
             </p>
             <p class="rodape-local">Corpus Fitness - Teixeira de Freitas/BA</p>
